--- a/libs/one-ux/package.json
+++ b/libs/one-ux/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0"
+    "@angular/core": "^12.2.0",
+    "bootstrap": "^5.1.3"
   },
   "dependencies": {
-    "tslib": "^2.3.0",
-    "bootstrap": "^5.1.3"
+    "tslib": "^2.3.0"
   }
 }
