--- a/nx.json
+++ b/nx.json
@@ -34,7 +34,8 @@
   },
   "projects": {
     "demo": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": []
     },
     "demo-e2e": {
       "tags": [],
