--- a/angular.json
+++ b/angular.json
@@ -152,6 +152,88 @@
         }
       }
     },
+    "demo-ui": {
+      "projectType": "library",
+      "root": "libs/demo-ui",
+      "sourceRoot": "libs/demo-ui/src",
+      "prefix": "rex-lib",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/demo-ui"],
+          "options": {
+            "jestConfig": "libs/demo-ui/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/demo-ui/src/**/*.ts",
+              "libs/demo-ui/src/**/*.html"
+            ]
+          }
+        },
+        "storybook": {
+          "builder": "@nrwl/storybook:storybook",
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "port": 4400,
+            "config": {
+              "configFolder": "libs/demo-ui/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
+        },
+        "build-storybook": {
+          "builder": "@nrwl/storybook:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "outputPath": "dist/storybook/demo-ui",
+            "config": {
+              "configFolder": "libs/demo-ui/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
+        }
+      }
+    },
+    "demo-ui-e2e": {
+      "root": "apps/demo-ui-e2e",
+      "sourceRoot": "apps/demo-ui-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/demo-ui-e2e/cypress.json",
+            "devServerTarget": "demo-ui:storybook"
+          },
+          "configurations": {
+            "ci": {
+              "devServerTarget": "demo-ui:storybook:ci"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/demo-ui-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
     "one-ui": {
       "projectType": "library",
       "root": "libs/one-ui",
