--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@nrwl/angular": "12.10.0",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
     "bootstrap": "^5.1.3",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
