--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
     "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.2.0",
+    "@angular/cli": "^12.2.13",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/elements": "^12.2.11",
     "@angular/language-service": "^12.2.0",
