--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,11 @@
             "tsConfig": "apps/demo/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["apps/demo/src/favicon.ico", "apps/demo/src/assets"],
-            "styles": ["apps/demo/src/styles.scss"],
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "apps/demo/src/styles.scss"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": ["libs/one-ux"]
             },
