--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
-    "@nrwl/angular": "12.10.0",
+    "@nrwl/angular": "13.1.3",
     "ag-grid-angular": "^26.1.0",
     "ag-grid-community": "^26.1.0",
     "bootstrap": "^5.1.3",
@@ -42,14 +42,14 @@
     "@angular/language-service": "^12.2.0",
     "@babel/core": "^7.15.8",
     "@compodoc/compodoc": "^1.1.15",
-    "@nrwl/cli": "12.10.0",
-    "@nrwl/cypress": "12.10.0",
-    "@nrwl/eslint-plugin-nx": "12.10.0",
-    "@nrwl/jest": "12.10.0",
-    "@nrwl/linter": "12.10.0",
-    "@nrwl/storybook": "12.10.0",
-    "@nrwl/tao": "12.10.0",
-    "@nrwl/workspace": "12.10.0",
+    "@nrwl/cli": "13.1.3",
+    "@nrwl/cypress": "13.1.3",
+    "@nrwl/eslint-plugin-nx": "13.1.3",
+    "@nrwl/jest": "13.1.3",
+    "@nrwl/linter": "13.1.3",
+    "@nrwl/storybook": "13.1.3",
+    "@nrwl/tao": "13.1.3",
+    "@nrwl/workspace": "13.1.3",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -68,7 +68,11 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
-    "ng-packagr": "^12.1.1",
+    "ng-packagr": "12.2.5",
+    "postcss": "^8.3.9",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
