--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
-    "@typescript-eslint/parser": "~4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "@webcomponents/custom-elements": "^1.5.0",
     "babel-loader": "^8.2.3",
     "cypress": "^8.3.0",
