--- a/libs/one-ui/tsconfig.json
+++ b/libs/one-ui/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
