--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start": "nx sercd ve",
+    "start": "nx serve --open",
     "build": "nx build",
     "test": "nx test",
     "docs:json": "compodoc -p ./tsconfig.base.json -e json -d .",
